<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ItemCartRegistration">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/registration_itemCart_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:checkedButton="@+id/radioButton2"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <RadioButton
                    android:id="@+id/registration_itemCart_rbtnProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/itemCart_registration_products"
                    android:checked="true"
                    android:textColor="@android:color/white"
                    android:onClick="onRadioButtonClicked"
                    />

                <RadioButton
                    android:id="@+id/registration_itemCart_rbtnRecipes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/itemCart_registration_recipes"
                    android:textColor="@android:color/white"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <SearchView
                android:id="@+id/search_itemCartRegistration"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:foregroundTint="@android:color/white"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:queryHint="Adicione um item"
                android:searchHintIcon="@null"
                android:searchIcon="@null"
                app:layout_constraintEnd_toStartOf="@+id/registration_itemCart_confirm"
                app:layout_constraintStart_toEndOf="@+id/registration_itemCart_cancel"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registration_itemCart_cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registration_itemCart_confirm"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/itemCart_registration_save"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>