<RelativeLayout android:id="@+id/cart_view_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include
        android:id="@+id/itemCart_emptyList"
        layout="@layout/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/itemCart_btn_registerProduct"
            app:fabSize="normal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_itemcart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:backgroundTint="@color/colorPrimaryDark"/>



        <include
            android:id="@+id/cart_management_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            layout="@layout/management_list"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list_itemCarts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-11dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical" />

    <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/btn_newItemCart"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_margin="16dp"-->
            <!--android:backgroundTint="@color/colorPrimary"-->
            <!--android:src="@drawable/ic_add"/>-->


    </RelativeLayout>


