...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/registration_itemCart_mainView">

        <ToggleButton
            android:id="@+id/registration_itemCart_btnManagement"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:checked="false"
            android:textOff="@null"
...
            android:layout_width="172dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|start"
            android:text="Product Name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registration_itemCart_btnAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/registration_itemCart_btnAdd"
            android:layout_width="32dp"
            android:layout_height="32dp"
...
